# bevy_fundsp

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/: FUNDING.yml
.github/workflows/: rust.yml
examples/: interactive.rs
examples/bevy_audio/: interactive.rs  interactive_component.rs  noise.rs  pitch.rs
examples/kira/: interactive.rs  noise.rs
examples/oddio/: controlled.rs  interactive.rs  noise.rs
src/: backend.rs  dsp_data.rs  dsp_graph.rs  dsp_manager.rs  dsp_source.rs  kira_impl.rs  lib.rs  oddio_impl.rs  rodio_impl.rs
src/backend/: bevy_audio.rs  kira.rs  oddio.rs
