[package]
name = "bevy_fundsp"
authors = ["Gio Genre De Asis"]
version = "0.1.0"
edition = "2021"
description = "A Bevy plugin that integrates FunDSP into Bevy."
homepage = "https://github.com/harudagondi/bevy_fundsp"
repository = "https://github.com/harudagondi/bevy_fundsp"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "fundsp", "audio", "gamedev", "dsp"]
categories = ["game-development", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fundsp = "0.9"
kira = { version = "0.6", default-features = false, features = ["wav"], optional = true }
# bevy_oddio = { git = "https://github.com/harudagondi/bevy_oddio.git", optional = true }

atomic = "0.5"

[dependencies.bevy]
# git = "https://github.com/bevyengine/bevy"
version = "0.8"
default-features = false 
features = ["bevy_asset"]

[dependencies.bevy_kira_audio]
# git = "https://github.com/NiklasEi/bevy_kira_audio.git"
# branch = "bevy_main"
version = "0.11"
default-features = false
features = ["wav"]
optional = true

[features]
default = ["bevy_audio"]
kira = ["dep:kira", "bevy_kira_audio"]
bevy_audio = ["bevy/bevy_audio", "bevy/wav"]
# oddio = ["bevy_oddio"]

[dev-dependencies.bevy]
# git = "https://github.com/bevyengine/bevy"
version = "0.8"
default-features = false
features = [
  "render",
  "animation",
  "bevy_winit",
  "bevy_gilrs",
  "png",
  "hdr",
  "filesystem_watcher",
  "x11"
]

[[example]]
name = "noise"
path = "examples/bevy_audio/noise.rs"
required-features = ["bevy_audio"]


[[example]]
name = "interactive"
path = "examples/bevy_audio/interactive.rs"
required-features = ["bevy_audio"]

[[example]]
name = "kira_noise"
path = "examples/kira/noise.rs"
required-features = ["kira"]


[[example]]
name = "kira_interactive"
path = "examples/kira/interactive.rs"
required-features = ["kira"]

# [[example]]
# name = "oddio_noise"
# path = "examples/oddio/noise.rs"
# required-features = ["oddio"]